[package]
name = "blob"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.26", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0.88"
tokio = { version = "1", features = ["full"] }
serde_derive = "1.0.149"
serde = "1.0.149"
git2 = "0.15.0"
chrono = { version = "0.4.23", features = ["serde"] }
dotenv = "0.15.0"
anyhow = "1.0.69"
