[package]
name = "blob"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
reqwest = { version = "0.11.14", features = ["json"] }
serde_json = "1.0.92"
tokio = { version = "1.25.0", features = ["full"] }
serde_derive = "1.0.152"
serde = "1.0.152"
git2 = "0.16.1"
chrono = { version = "0.4.23", features = ["serde"] }
dotenv = "0.15.0"
anyhow = "1.0.69"
futures = "0.3.26"
infer = "0.13.0"
rayon = "1.7.0"
crossbeam-utils = "0.8.15"
sha2 = "0.10.6"
